fix spacing inside categories and social boxes

--- a/src/index.css
+++ b/src/index.css
@@ -162,7 +162,8 @@ body {
 }
 
 .social_text_container {
-  margin-right: 20px;
+  margin-right: 10px;
+  margin-left: 10px;
   padding: 0;
 }
 
@@ -173,7 +174,7 @@ body {
   font-weight: 400;
   text-shadow: 1px 1px #000000;
   margin-right: 0px;
-  margin-left: 30px;
+  margin-left: 0px;
   letter-spacing: .12rem;
   line-height: 40px;
 }
@@ -182,7 +183,8 @@ body {
   position: relative;
   margin-right: auto;
   margin-left: 20px;
-  margin-right: 30px;
+  margin-right: 20px;
+  width: 90%;
 }
 
 .social_image_container > a {
@@ -190,7 +192,8 @@ body {
 }
 
 .social_mockup {
-  width: 450px;
+  width: 100%;
+  min-width: 300px;
   border-radius: 20px;
 }
 
@@ -611,7 +614,7 @@ hr {
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
-    padding: 20px 0px;
+    padding: 20px 0px 0px 0px;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
@@ -621,24 +624,38 @@ hr {
 
   .social_text_container {
     width: 100%;
+    margin-right: 0px;
+    margin-left: 0px;
+    padding: 10px 10px 0px 10px;
   }
   
   .social_text {
     color: #FBFAF8;
-    width: 85%;
+    width: 100%;
+    margin-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
+    width: 90%;
     font-size: 18px;
     font-weight: 400;
     text-shadow: 1px 1px #000000;
     letter-spacing: .12rem;
     line-height: 30px;
   }
+
+  .social_image_container {
+    position: relative;
+    margin-right: auto;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+  }
   
   .social_mockup {
-    width: 400px;
+    width: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
+    min-width: 0px;
   }
 
   .reviews_container {
@@ -695,6 +712,8 @@ hr {
   
   .categories_text {
     width: 85%;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 18px;
     letter-spacing: .12rem;
     line-height: 26px;
